--- a/Week-9-Join-Exercises.Rmd
+++ b/Week-9-Join-Exercises.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Join Data with dplyr"
+output: github_document
 ---
 
 ```{r setup}
@@ -60,7 +61,7 @@ Which airlines had the largest arrival delays? Complete the code below.
 ```{r}
 flights %>%
   drop_na(arr_delay) %>%
-  ___________(airlines, by = "_________")  %>%
+  left_join(airlines, by = "carrier")  %>%
   head() 
 ```
 
@@ -76,10 +77,10 @@ Which airlines had the largest arrival delays? Complete the code below.
 ```{r}
 flights %>%
   drop_na(arr_delay) %>%
-  __________________  %>%
-  group_by(_________) %>%
-  __________________  %>%
-  arrange(__________) 
+  left_join(airlines, by = "carrier")  %>%
+  group_by(name) %>%
+  summarise(mean_arr_delay=mean(arr_delay))  %>%
+  arrange(desc(mean_arr_delay)) 
 ```
 
 ## Your Turn 2a
@@ -90,7 +91,7 @@ Join `flights` and `airports` by `dest` and `faa`.
 ```{r}
 flights %>% 
   drop_na(arr_delay) %>%
-  ______(airports, __________________) %>%
+  left_join(airports, by = c("dest" = "faa")) %>%
   head()
 
 ```
@@ -109,10 +110,10 @@ Order by average delay, worst to best.
 ```{r}
 flights %>% 
   drop_na(arr_delay) %>%
-  ______(airports, __________________) %>%
+  left_join(airports, by = c("dest" = "faa")) %>%
   group_by(name) %>%
-  _________(distance = _____________, delay = _____________) %>%
-  ______(_____(delay))
+  summarise(distance = first(distance), delay = mean(arr_delay)) %>%
+  arrange(desc (delay))
 
 ```
 
@@ -132,8 +133,9 @@ How many airports in `airports` are serviced by flights in `flights`? (i.e. how 
 Notice that the column to join on is named `faa` in the **airports** data set and `dest` in the **flights** data set.
 
 ```{r}
-__________ %>%
-  _____________________________ %>%
+dim(airports)
+airports %>%
+  semi_join(flights, by = c("faa" = "dest"))%>%
   select(faa)
 ```
 
@@ -142,6 +144,11 @@ __________ %>%
 
 ```{r}
 distinct(instrument, plays)
+
+instrument %>% distinct(plays)
+flights %>% 
+  distinct(carrier, origin) %>% 
+  arrange(carrier)
 ```
 
 
